background-fixed on mobile

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -853,10 +853,10 @@ p {
 
 @media screen and (max-width: 768px) {
   #fh5co-contact {
-   background: url(../images/contact.jpg);
-    padding: 2em 0;
-     background-size: cover;
-      background-position: center;
+   background-attachment: scroll;
+   padding: 2em 0;
+   background-size: cover;
+   background-position: inherit;
   }
 }
 
